# originalcar

config/: origincar_config.json  yolov10workconfig.json  yolov2workconfig.json  yolov3workconfig.json  yolov5sconfig.json  yolov5workconfig.json  yolov5xworkconfig.json  yolov8workconfig.json
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/ackermann_msgs/include/ackermann_msgs/ackermann_msgs/msg/: rosidl_generator_cpp__visibility_control.hpp
install/ackermann_msgs/include/ackermann_msgs/ackermann_msgs/msg/detail/: ackermann_drive__type_support.hpp  ackermann_drive_stamped__type_support.hpp
install/image_upload_analyzer/lib/image_upload_analyzer/: image_upload_analyzer
install/image_upload_analyzer/share/image_upload_analyzer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_complementary_filter/lib/imu_complementary_filter/: complementary_filter_node
install/imu_complementary_filter/share/imu_complementary_filter/: local_setup.sh  package.sh
install/imu_complementary_filter/share/imu_complementary_filter/cmake/: imu_complementary_filterConfig.cmake
install/imu_complementary_filter/share/imu_complementary_filter/config/: filter_config.yaml
install/origincar_base/include/origincar_base/origincar_base/msg/: rosidl_generator_cpp__visibility_control.hpp
install/origincar_base/include/origincar_base/origincar_base/msg/detail/: position__type_support.hpp
install/origincar_competition/share/ament_index/resource_index/package_run_dependencies/: origincar_competition
install/origincar_competition/share/ament_index/resource_index/parent_prefix_path/: origincar_competition
install/origincar_competition/share/origincar_competition/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/origincar_competition/share/origincar_competition/cmake/: origincar_competitionConfig.cmake
install/origincar_competition/share/origincar_competition/launch/: start.launch.py
install/origincar_msg/include/origincar_msg/origincar_msg/msg/: rosidl_generator_cpp__visibility_control.hpp
install/origincar_msg/include/origincar_msg/origincar_msg/msg/detail/: data__type_support.hpp  sign__type_support.hpp
install/origincar_qr/lib/origincar_qr/: li4
install/origincar_qr/share/origincar_qr/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/qr_decoder/lib/qr_decoder/: qr_decoder
install/qr_decoder/share/ament_index/resource_index/package_run_dependencies/: qr_decoder
install/qr_decoder/share/qr_decoder/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/qr_decoder/share/qr_decoder/cmake/: qr_decoderConfig.cmake
install/utils/lib/utils/: image_transport_node
log/: latest_build
src/image_upload_analyzer/: setup.py
src/line_follower/line_follower/: line_follower_node.py
src/origincar/: README.md
src/origincar/config/: origincar.list  origincar_config.json
src/origincar/image_upload_analyzer/: setup.cfg
src/origincar/line_follower/: package.xml  setup.py
src/origincar/line_follower/line_follower/: line_follower_node.py
src/origincar/origincar_bringup/launch/: usb_websocket_display.launch.py
src/origincar/origincar_competition/: CMakeLists.txt  package.xml
src/origincar/origincar_competition/include/origincar_competition/: origincar_competition.h
src/origincar/origincar_competition/launch/: complete_system.launch.py  start.launch.py
src/origincar/origincar_competition/src/: origincar_competition.cpp  priority_controller.cpp
src/origincar/origincar_description/: package.xml
src/origincar/origincar_description/launch/: gazebo.launch
src/origincar/origincar_description/urdf/: origincar.xacro
src/origincar/origincar_qr/: package.xml  requirements.txt  setup.cfg  setup.py
src/origincar/qr_decoder/: CMakeLists.txt
src/origincar/qr_decoder/src/: qr_decoder.cpp
src/origincar/runtest/: CMakeLists.txt  package.xml
src/origincar/runtest/config/: record.txt
src/origincar/runtest/src/: final_controller.cpp  test01.cpp  test02.cpp  test02.hpp
src/racing_obstacle_detection_yolo/: CMakeLists.txt  README.md  README_cn.md  package.xml
src/racing_obstacle_detection_yolo/config/: obstacles_simulation.list  yolov5sconfig.json  yolov5sconfig_simulation.json
src/racing_obstacle_detection_yolo/include/racing_obstacle_detection/: image_utils.h  parser.h
src/racing_obstacle_detection_yolo/launch/: racing_obstacle_detection_yolo.launch.py
src/racing_obstacle_detection_yolo/src/: avoid_obstacle.cpp  image_utils.cpp  parser.cpp  sample.cpp
